// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2133,
  "sha256": "a174709f2ae42fd5204d8ea34bd37ef5f6bd8ad27ce67d32b36c326659cc5886",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1979,
  "sha256": "420973f299de2d6a3faf4953c4c6761761bbde2bb36fd05091b975bae4cbba43",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2224,
  "sha256": "d62ae1e618a1e9e3cb380d9d843744d1ddd391943bfb7a0a8f809951c20c015e",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2150,
  "sha256": "d0be82c2d2102ce1794668881c4332b4f263bb37c2541596b74b0434c24d9f35",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 503,
  "sha256": "a21f8fd84f7a3f07e0e8d7f693b1285898bda918760e10ff36f71e579759f29e",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1774,
  "sha256": "9446256a7673d1cf3d987b1d1b6fa0ed2dee0d785889660650058a76393c7cb8",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 541,
  "sha256": "16ca36856409b755baefb68d874b6aa0b52caf6b677f7c89569948ac0b2a2407",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 453,
  "sha256": "333f92578151c6415d6f3c98b99aca49b16b3f97635488959207e42bc03b2ea1",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1862,
  "sha256": "8424b71ce07e046cd3c6e7897848f17dc6e4c703b7948e60aa0aeb75c7efe263",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "5449dc16a31f193ec7503dcaa36f7d352e4243d61e7d5b1464e70ba86a293cae",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "b49a5c188f6af94312a0db88db0ef13a9f6bbf3ba4f575038083a6dca950cb6f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "cf78dc5c6e8c4528ee5681723e15629cb165547de9fe4d8f1bcbe58688c080dc",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "60f506dd31c0e2f73c58ac5afeb9bc3daaf60159ab04cb9f31698fd2bea6b46f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "b64cd33c4ed31bdd457f42012c9b84d66a38da2b087e0c69b0e1ea6a96f46e47",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "215e981f8fe1f3153e94279477e3f7c8e569fce238dff008c65b5465bde9fbb3",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 45,
  "sha256": "6f5cbdf95ff100e687481dc97b4d13ba8e13bb3f0b8b90c4689c31d7494b6624",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "cd45379611e23255d8606d719a8b4b17d224b5b0766b57856b038203f90161ed",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "fc84d63c2011ee5ca0a300afa10f83f6ca6296c56370acc968dfc61fcfcfcf63",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "7e5ff99cc4cae5a978c101a45e957e9692bdd361a2eab580f0a9b63ae491140a",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 386,
  "sha256": "e5d9a6491f606781daccf61751f3a6303dba3a4817ff58d2a819c74267286508",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "19053f2efa8fae4f51b4729001c05b852a55922d0364d01834ba7efe20366a70",
}
`;
